Trying to fix new iOS image missing borders

--- a/style.css
+++ b/style.css
@@ -141,6 +141,14 @@ td.selected:hover
         -1px  0px  0px var(--labelOutlineColor);
     transition: text-shadow 0.2s;
 }
+.label:hover
+{
+    --labelOutlineColor: orange;
+}
+.customLabel
+{
+    --labelOutlineColor: red;
+}
 
 .quantityLabel
 {
@@ -148,10 +156,6 @@ td.selected:hover
     right: 5px;
 
     font-size: 50px;
-}
-.quantityLabel:hover, .customQuantityLabel:hover
-{
-    --labelOutlineColor: orange;
 }
 .customQuantityLabel
 {
@@ -173,11 +177,6 @@ td.selected:hover
 
     --coin-stroke-color: #4444;
 }
-.priceLabel:hover, .customPriceLabel:hover
-{
-    --labelOutlineColor: orange;
-    --coin-stroke-color: #ffa50044;
-}
 .customPriceLabel
 {
     transform: translate(0%, -100%);
@@ -189,9 +188,9 @@ td.selected:hover
     /* color: yellow; */
     --coin-stroke-color: #0004;
 }
-.customLabel
+:is(.priceLabel, .customPriceLabel):hover
 {
-    --labelOutlineColor: red;
+    --coin-stroke-color: #ffa50044;
 }
 
 .coin
@@ -269,9 +268,15 @@ td.selected:hover
 /* technically, the name hideOverlayButton would better match how I named the id's, but I wanted to stay consistent with my naming of the css classes, as overlay is the more general/"parent" component */
 .overlayHideButton
 {
-    position: absolute;
+    /* position: absolute; */
+    /* position: fixed; */
+    position: sticky;
+    /* top: 10px; */
+    /* right: 10px; */
     top: 10px;
-    right: 10px;
+    left: calc(100% - 35px);
+    /* transform: translateX(-100%): */
+    /* transform: translateX(100px): */
 }
 
 
@@ -291,8 +296,8 @@ td.selected:hover
     outline: none; /* prevents black outline of focused input, along with when shift is pressed when a button is "focused" */
 }
 
-/* the second entry in :is makes every element inside totalPriceArea fade in (it also makes images inside the p tag not fade in each time they are loaded, but it does fade in with the p tag itself the first time which is what I want; the :not:empty is to make sure the equation fades in whenever it is populated, since it can be "visible" while still empty, causing it to otherwise instantly appear when populated) */
-:is(.overlay, #totalPriceArea :not(img, :empty), #priceCalculationModeSelectionInfo)
+/* the second entry makes every element inside totalPriceArea fade in (it also makes images inside the p tag not fade in each time they are loaded, but it does fade in with the p tag itself the first time which is what I want; the :not:empty is to make sure the equation fades in whenever it is populated, since it can be "visible" while still empty, causing it to otherwise instantly appear when populated) */
+.overlay, #totalPriceArea :not(img, :empty), #priceCalculationModeSelectionInfo
 {
     animation: fadeIn 0.3s forwards;
 }
@@ -341,7 +346,8 @@ td.selected:hover
     color: white;
 
     /* TEST */
-    margin: 0;
+    /* DIDNT WORK */
+    /* margin: 0; */
 }
 
 #fuzzyMatchesHolder div
